--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "lazy-util",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/",
+  "module": "lib",
   "scripts": {
-    "build": "rollup --config rollup.config.js",
+    "build": "rm -rf lib && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,17 @@
   },
   "homepage": "https://github.com/timtnleeProject/lazy-util#readme",
   "devDependencies": {
-    "rollup": "^2.58.3"
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "2.4.1",
+    "typescript": "^4.4.4"
   }
 }
